--- a/index.html
+++ b/index.html
@@ -1,24 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
   <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/layout.css">
   <link rel="stylesheet" href="styles/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+  <title>Nerds</title>
 </head>
+
 <body>
-  <header>
-    <div class="nr-header">
-      <div class="container">
-
-        
-
+  <header class="nr-header">
+    <div class="container">
+      <div class="nr-top">
+        <div class="nr-top-logo">
+          <img src="./img/nerds-logo.png" alt="nerds">
+        </div>
+        <nav class="nr-top-menu">
+          <div class="nr-top-menu__items"><a href="#">студия</a></div>
+          <div class="nr-top-menu__items"><a href="#">клиенты</a></div>
+          <div class="nr-top-menu__items"><a href="#">магазин</a></div>
+          <div class="nr-top-menu__items"><a href="#">контакты</a></div>
+        </nav>
+        <div class="nr-top-cart">
+          <img class="nr-top-cart__logo" src="./img/cart-icon.png" alt="">
+          <span class="nr-top-cart__">КОРЗИНА</span>
+        </div>
       </div>
     </div>
   </header>
+  <main>
+    <section class="nr-section1">
+      <div class="container">
+        <div class="nr-section1-left">
+          <h1 class="nr-section1-left__title">
+            Долго, дорого, скурпулезно.
+          </h1>
+          <h3 class="nr-section1-left__descr">
+            Математически выверенный дизайн для вашего сайта или мобильного приложения
+          </h3>
+          <a href="#" class="nr-section1-left__btn">УЗНАТЬ БОЛЬШЕ</a>
+        </div>
+        <div class="nr-section1-right">
+          <!-- <img src="./img/slide1.jpg" alt="" class="nr-section1-right__img"> -->
+        </div>
+      </div>
+    </section>
 
+    <section class="nr-section2">
+      <div class="container">
+        <div class="ba-row">
+          <div class="ba-col-4">
+            <div class="nr-info-block">
+              <div class="nr-info-block-top nr-info-block__1">
+                <img src="./img/illustration-1.jpg" alt="illustration">
+              </div>
+              <div class="nr-info-block-text">
+                <h3 class="nr-info-block-text__title">Веб-сайты</h3>
+                <p class="nr-info-block-text__descr">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+              </div>
+              <div class="nr-info-block-bottom">
+                <a class="nr-info-block-bottom__btn nr-info-block__1" href="#">заказать</a>
+              </div>
+            </div>
+          </div>
+          <div class="ba-col-4">
+            <div class="nr-info-block">
+              <div class="nr-info-block-top nr-info-block__2">
+                <img src="./img/illustration-2.jpg" alt="illustration">
+              </div>
+              <div class="nr-info-block-text">
+                <h3 class="nr-info-block-text__title">приложения</h3>
+                <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+              </div>
+              <div class="nr-info-block-bottom">
+                <a class="nr-info-block-bottom__btn nr-info-block__2" href="#">заказать</a>
+              </div>
+            </div>
+          </div>
+          <div class="ba-col-4">
+            <div class="nr-info-block">
+              <div class="nr-info-block-top nr-info-block__3">
+                <img src="./img/illustration-3.jpg" alt="illustration">
+              </div>
+              <div class="nr-info-block-text">
+                <h3 class="nr-info-block-text__title">презентации</h3>
+                <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+              </div>
+              <div class="nr-info-block-bottom">
+                <a class="nr-info-block-bottom__btn nr-info-block__3" href="#">заказать</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="nr-section3">
+      <div class="container nr-section3-wrapper">
+        <div class="nr-section3-left">
+          <h2 class="nr-section3-left__title">
+              Мы — маленькая, но гордая дизайн-студия из Краснодара. 
+          </h2>
+          <p class="nr-section3-left__descr">
+              Математически выверенный дизайн  для вашего сайта или мобильного приложения
+          </p>
+          <h4 class="nr-section3-left__title2">
+              Выполняем заказы на разработку:
+          </h4>
+          <ul>
+            <li class="nr-section3-left__list">Веб-сайтов любой сложности</li>
+            <li class="nr-section3-left__list">Моб приложений для iOS и Android</li>
+            <li class="nr-section3-left__list">Слайдшоу и видео для корпоративных презентаиций</li>
+          </ul>
+        </div>
+        <div class="nr-section3-right">
+
+        </div>
+      </div>
+    </section>
+
+    <section class="nr-section4">
+      <div class="container nr-section4-wrapper">
+          <div class="nr-customers">
+            <a href="#">
+              <img src="./img/logo-1.png" alt="">
+            </a>
+          </div>
+          <div class="nr-customers">
+            <a href="#">
+              <img src="./img/logo-2.png" alt="">
+            </a>
+          </div>
+          <div class="nr-customers">
+            <a href="#">
+              <img src="./img/logo-3.png" alt="">
+            </a>
+          </div>
+          <div class="nr-customers">
+            <a href="#">
+              <img src="./img/logo-4.png" alt="">
+            </a>
+          </div>
+        </div>
+
+    </section>
+
+    <section class="nr-section5">
+
+    </section>
+
+    <footer class="nr-footer">
+      <div class="container nr-footer-wrapper">
+        <ul class="nr-social__list">
+          <a href="#">
+            <li class="nr-social__items"><img src="./img/vk-icon.png" alt=""></li>
+          </a>
+          <a href="#">
+            <li class="nr-social__items"><img src="./img/fb-icon.png" alt=""></li>
+          </a>
+          <a href="#">
+            <li class="nr-social__items"><img src="./img/insta-icon.png" alt=""></li>
+          </a>
+        </ul>
+        <div class="nr-footer-text">
+          <h3 class="nr-footer-text__title">Давайте дружить, это выгодно!</h3>
+          <h4 class="nr-footer-text__descr">Скидка 10% для друзей из социальных сетей.</h4>
+        </div>
+      </div>
+
+    </footer>
+  </main>
 
 </body>
+
 </html>
