--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h3 class="nr-section1-left__descr">
             Математически выверенный дизайн для вашего сайта или мобильного приложения
           </h3>
-          <a href="#" class="nr-section1-left__btn">УЗНАТЬ БОЛЬШЕ</a>
+          <a href="#" class="nr-section1-left__btn btn">УЗНАТЬ БОЛЬШЕ</a>
         </div>
         <div class="nr-section1-right">
           <!-- <img src="./img/slide1.jpg" alt="" class="nr-section1-right__img"> -->
@@ -63,7 +63,7 @@
                 <p class="nr-info-block-text__descr">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
               </div>
               <div class="nr-info-block-bottom">
-                <a class="nr-info-block-bottom__btn nr-info-block__1" href="#">заказать</a>
+                <a class="nr-info-block-bottom__btn nr-info-block__1 btn" href="#">заказать</a>
               </div>
             </div>
           </div>
@@ -77,7 +77,7 @@
                 <p>Покорите топ-10 приложений в AppStore и Google Play</p>
               </div>
               <div class="nr-info-block-bottom">
-                <a class="nr-info-block-bottom__btn nr-info-block__2" href="#">заказать</a>
+                <a class="nr-info-block-bottom__btn nr-info-block__2 btn" href="#">заказать</a>
               </div>
             </div>
           </div>
@@ -91,7 +91,7 @@
                 <p>Вы даже не подозреваете, насколько вы изумительны!</p>
               </div>
               <div class="nr-info-block-bottom">
-                <a class="nr-info-block-bottom__btn nr-info-block__3" href="#">заказать</a>
+                <a class="nr-info-block-bottom__btn nr-info-block__3 btn" href="#">заказать</a>
               </div>
             </div>
           </div>
@@ -103,13 +103,13 @@
       <div class="container nr-section3-wrapper">
         <div class="nr-section3-left">
           <h2 class="nr-section3-left__title">
-              Мы — маленькая, но гордая дизайн-студия из Краснодара. 
+            Мы — маленькая, но гордая дизайн-студия из Краснодара.
           </h2>
           <p class="nr-section3-left__descr">
-              Математически выверенный дизайн  для вашего сайта или мобильного приложения
+            Математически выверенный дизайн для вашего сайта или мобильного приложения
           </p>
           <h4 class="nr-section3-left__title2">
-              Выполняем заказы на разработку:
+            Выполняем заказы на разработку:
           </h4>
           <ul>
             <li class="nr-section3-left__list">Веб-сайтов любой сложности</li>
@@ -118,39 +118,74 @@
           </ul>
         </div>
         <div class="nr-section3-right">
-
+          <div class="nr-section3-right-wrapper">
+            <img src="./img/nerds-illustration.png" alt="nerds">
+            <h5>с 2004 года Любим точность во всем:</h5>
+            <div class="nr-section3-right-wrapper2">
+              <div>
+                <h5>146%</h5>
+                <p>Уровень самоотдачи</p>
+              </div>
+              <div>
+                <h5>146%</h5>
+                <p>Уровень самоотдачи</p>
+              </div>
+              <div>
+                <h5>146%</h5>
+                <p>Уровень самоотдачи</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
     <section class="nr-section4">
       <div class="container nr-section4-wrapper">
-          <div class="nr-customers">
-            <a href="#">
-              <img src="./img/logo-1.png" alt="">
-            </a>
-          </div>
-          <div class="nr-customers">
-            <a href="#">
-              <img src="./img/logo-2.png" alt="">
-            </a>
-          </div>
-          <div class="nr-customers">
-            <a href="#">
-              <img src="./img/logo-3.png" alt="">
-            </a>
-          </div>
-          <div class="nr-customers">
-            <a href="#">
-              <img src="./img/logo-4.png" alt="">
-            </a>
-          </div>
+        <div class="nr-customers">
+          <a href="#">
+            <img src="./img/logo-1.png" alt="">
+          </a>
         </div>
+        <div class="nr-customers">
+          <a href="#">
+            <img src="./img/logo-2.png" alt="">
+          </a>
+        </div>
+        <div class="nr-customers">
+          <a href="#">
+            <img src="./img/logo-3.png" alt="">
+          </a>
+        </div>
+        <div class="nr-customers">
+          <a href="#">
+            <img src="./img/logo-4.png" alt="">
+          </a>
+        </div>
+      </div>
 
     </section>
 
     <section class="nr-section5">
 
+      <div class="container">
+        <div class="nr-section5-about">
+          <div class="nr-section5-about-wrapper">
+            <h4 class="nr-section5-about__title">
+              NЁRDS DESIGN STUDIO
+            </h4>
+            <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <p>тел. +7 (812) 275-75-75</p>
+            <a class="nr-section5-about__btn btn" href="mailto:info@nerds.gmail.com">Напишите нам</a>
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6115610037818!2d30.32152390393267!3d59.93858749715135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1572667649929!5m2!1sru!2sua"
+        width="1920" height="418" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </section>
 
     <footer class="nr-footer">
