--- a/index.html
+++ b/index.html
@@ -16,36 +16,40 @@
   <header class="nr-header">
     <div class="container">
       <div class="nr-top">
-        <div class="nr-top-logo">
-          <img src="./img/nerds-logo.png" alt="nerds">
-        </div>
+        <!-- <div class="nr-top-logo"> -->
+        <a href="#">
+          <img class="nr-top-logo" src="./img/nerds-logo.png" alt="nerds">
+        </a>
+        <!-- </div> -->
         <nav class="nr-top-menu">
           <div class="nr-top-menu__items"><a href="#">студия</a></div>
           <div class="nr-top-menu__items"><a href="#">клиенты</a></div>
           <div class="nr-top-menu__items"><a href="#">магазин</a></div>
           <div class="nr-top-menu__items"><a href="#">контакты</a></div>
         </nav>
-        <div class="nr-top-cart">
+        <!-- <div > -->
+        <a class="nr-top-cart" href="#">
           <img class="nr-top-cart__logo" src="./img/cart-icon.png" alt="">
-          <span class="nr-top-cart__">КОРЗИНА</span>
-        </div>
+          <span class="nr-top-cart__cart">КОРЗИНА</span>
+        </a>
+        <!-- </div> -->
       </div>
     </div>
   </header>
   <main>
     <section class="nr-section1">
-      <div class="container">
+      <div class="container nr-section1-wrapper">
         <div class="nr-section1-left">
           <h1 class="nr-section1-left__title">
             Долго, дорого, скурпулезно.
           </h1>
           <h3 class="nr-section1-left__descr">
-            Математически выверенный дизайн для вашего сайта или мобильного приложения
+            Математически выверенный дизайн для вашего сайта или мобильного приложения.
           </h3>
           <a href="#" class="nr-section1-left__btn btn">УЗНАТЬ БОЛЬШЕ</a>
         </div>
         <div class="nr-section1-right">
-          <!-- <img src="./img/slide1.jpg" alt="" class="nr-section1-right__img"> -->
+          <img src="./img/slide1.png" alt="" class="nr-section1-right__img">
         </div>
       </div>
     </section>
@@ -168,7 +172,7 @@
 
     <section class="nr-section5">
 
-      <div class="container">
+      <div class="container nr-section5-wrapper">
         <div class="nr-section5-about">
           <div class="nr-section5-about-wrapper">
             <h4 class="nr-section5-about__title">
@@ -177,15 +181,18 @@
             <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             <p>тел. +7 (812) 275-75-75</p>
             <a class="nr-section5-about__btn btn" href="mailto:info@nerds.gmail.com">Напишите нам</a>
-
           </div>
+        </div>
+        <div>
+          <img src="./img/map-marker.png" alt="marker">
         </div>
       </div>
     </section>
     <section>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6115610037818!2d30.32152390393267!3d59.93858749715135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1572667649929!5m2!1sru!2sua"
-        width="1920" height="418" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        width="100%" height="418" frameborder="0" style="border:0;" allowfullscreen="">
+      </iframe>
     </section>
 
     <footer class="nr-footer">
