--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- <div > -->
         <a class="nr-top-cart" href="#">
           <img class="nr-top-cart__logo" src="./img/cart-icon.png" alt="">
-          <span class="nr-top-cart__cart">КОРЗИНА</span>
+          <span class="nr-top-cart__name">корзина</span>
         </a>
         <!-- </div> -->
       </div>
@@ -38,7 +38,7 @@
   </header>
   <main>
     <section class="nr-section1">
-      <div class="container nr-section1-wrapper">
+      <div class="nr-section1-wrapper container">
         <div class="nr-section1-left">
           <h1 class="nr-section1-left__title">
             Долго, дорого, скурпулезно.
@@ -59,9 +59,9 @@
         <div class="ba-row">
           <div class="ba-col-4">
             <div class="nr-info-block">
-              <div class="nr-info-block-top nr-info-block__1">
-                <img src="./img/illustration-1.jpg" alt="illustration">
-              </div>
+              <!-- <div class=""> -->
+              <img class="nr-info-block-top nr-info-block__1" src="./img/illustration-1.jpg" alt="illustration">
+              <!-- </div> -->
               <div class="nr-info-block-text">
                 <h3 class="nr-info-block-text__title">Веб-сайты</h3>
                 <p class="nr-info-block-text__descr">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
@@ -73,12 +73,12 @@
           </div>
           <div class="ba-col-4">
             <div class="nr-info-block">
-              <div class="nr-info-block-top nr-info-block__2">
-                <img src="./img/illustration-2.jpg" alt="illustration">
-              </div>
+              <!-- <div> -->
+              <img class="nr-info-block-top nr-info-block__2" src="./img/illustration-2.jpg" alt="illustration">
+              <!-- </div> -->
               <div class="nr-info-block-text">
                 <h3 class="nr-info-block-text__title">приложения</h3>
-                <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+                <p class="nr-info-block-text__descr">Покорите топ-10 приложений в AppStore и Google Play</p>
               </div>
               <div class="nr-info-block-bottom">
                 <a class="nr-info-block-bottom__btn nr-info-block__2 btn" href="#">заказать</a>
@@ -87,12 +87,12 @@
           </div>
           <div class="ba-col-4">
             <div class="nr-info-block">
-              <div class="nr-info-block-top nr-info-block__3">
-                <img src="./img/illustration-3.jpg" alt="illustration">
-              </div>
+              <!-- <div> -->
+              <img class="nr-info-block-top nr-info-block__3" src="./img/illustration-3.jpg" alt="illustration">
+              <!-- </div> -->
               <div class="nr-info-block-text">
                 <h3 class="nr-info-block-text__title">презентации</h3>
-                <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+                <p class="nr-info-block-text__descr">Вы даже не подозреваете, насколько вы изумительны!</p>
               </div>
               <div class="nr-info-block-bottom">
                 <a class="nr-info-block-bottom__btn nr-info-block__3 btn" href="#">заказать</a>
@@ -103,72 +103,67 @@
       </div>
     </section>
 
-    <section class="nr-section3">
-      <div class="container nr-section3-wrapper">
-        <div class="nr-section3-left">
-          <h2 class="nr-section3-left__title">
-            Мы — маленькая, но гордая дизайн-студия из Краснодара.
-          </h2>
-          <p class="nr-section3-left__descr">
-            Математически выверенный дизайн для вашего сайта или мобильного приложения
-          </p>
-          <h4 class="nr-section3-left__title2">
-            Выполняем заказы на разработку:
-          </h4>
-          <ul>
-            <li class="nr-section3-left__list">Веб-сайтов любой сложности</li>
-            <li class="nr-section3-left__list">Моб приложений для iOS и Android</li>
-            <li class="nr-section3-left__list">Слайдшоу и видео для корпоративных презентаиций</li>
-          </ul>
-        </div>
-        <div class="nr-section3-right">
-          <div class="nr-section3-right-wrapper">
-            <img src="./img/nerds-illustration.png" alt="nerds">
-            <h5>с 2004 года Любим точность во всем:</h5>
-            <div class="nr-section3-right-wrapper2">
-              <div>
-                <h5>146%</h5>
-                <p>Уровень самоотдачи</p>
-              </div>
-              <div>
-                <h5>146%</h5>
-                <p>Уровень самоотдачи</p>
-              </div>
-              <div>
-                <h5>146%</h5>
-                <p>Уровень самоотдачи</p>
-              </div>
-            </div>
+    <section class="nr-section3 container">
+      <div class="nr-section3-left">
+        <h2 class="nr-section3-left__title">
+          Мы — маленькая, но гордая дизайн-студия из Краснодара.
+        </h2>
+        <p class="nr-section3-left__descr">
+          Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не
+          покладая рук, как роботы.
+        </p>
+        <h4 class="nr-section3-left__title2">
+          Выполняем заказы на разработку:
+        </h4>
+        <ul>
+          <li class="nr-section3-left__list">Веб-сайтов любой сложности</li>
+          <li class="nr-section3-left__list">Моб приложений для iOS и Android</li>
+          <li class="nr-section3-left__list">Слайдшоу и видео для корпоративных презентаиций</li>
+        </ul>
+      </div>
+      <div class="nr-section3-right">
+        <img src="./img/nerds-illustration.png" alt="nerds">
+        <h5 class="nr-section3-right__title">с 2004 года Любим точность во всем:</h5>
+        <div class="nr-section3-right-wrapper">
+          <div>
+            <h5 class="nr-section3-right__persent">146%</h5>
+            <p>Уровень самоотдачи</p>
+          </div>
+          <div>
+            <h5 class="nr-section3-right__persent">100%</h5>
+            <p>Соблюдение  сроков</p>
+          </div>
+          <div>
+            <h5 class="nr-section3-right__persent">50%</h5>
+            <p>Минимальная предоплата</p>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="nr-section4">
-      <div class="container nr-section4-wrapper">
-        <div class="nr-customers">
-          <a href="#">
-            <img src="./img/logo-1.png" alt="">
-          </a>
-        </div>
-        <div class="nr-customers">
-          <a href="#">
-            <img src="./img/logo-2.png" alt="">
-          </a>
-        </div>
-        <div class="nr-customers">
-          <a href="#">
-            <img src="./img/logo-3.png" alt="">
-          </a>
-        </div>
-        <div class="nr-customers">
-          <a href="#">
-            <img src="./img/logo-4.png" alt="">
-          </a>
-        </div>
+    <div class="nr-section4 container ">
+      <div class="nr-customers">
+        <a href="#">
+          <img src="./img/logo-1.png" alt="">
+        </a>
+      </div>
+      <div class="nr-customers">
+        <a class="nr-section4__customers" href="#">
+          <img src="./img/logo-2.png" alt="">
+        </a>
+      </div>
+      <div class="nr-customers">
+        <a href="#">
+          <img src="./img/logo-3.png" alt="">
+        </a>
+      </div>
+      <div class="nr-customers">
+        <a href="#">
+          <img class="nr-section4__customers" src="./img/logo-4.png" alt="">
+        </a>
       </div>
 
-    </section>
+    </div>
 
     <section class="nr-section5">
 
@@ -188,12 +183,12 @@
         </div>
       </div>
     </section>
-    <section>
+    <!-- <section>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6115610037818!2d30.32152390393267!3d59.93858749715135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1572667649929!5m2!1sru!2sua"
         width="100%" height="418" frameborder="0" style="border:0;" allowfullscreen="">
       </iframe>
-    </section>
+    </section> -->
 
     <footer class="nr-footer">
       <div class="container nr-footer-wrapper">
