--- a/index.html
+++ b/index.html
@@ -124,20 +124,34 @@
       <div class="nr-section3-right">
         <img src="./img/nerds-illustration.png" alt="nerds">
         <h5 class="nr-section3-right__title">с 2004 года Любим точность во всем:</h5>
-        <div class="nr-section3-right-wrapper">
+        <div class="ba-row">
+          <div class="ba-col-4">
+            <h5 class="nr-section3-right__persent">146%</h5>
+            <p class="nr-section3-right__text">Уровень самоотдачи</p>
+          </div>
+          <div class="ba-col-4">
+            <h5 class="nr-section3-right__persent">100%</h5>
+            <p class="nr-section3-right__text">Соблюдение сроков</p>
+          </div>
+          <div class="ba-col-4">
+            <h5 class="nr-section3-right__persent">50%</h5>
+            <p class="nr-section3-right__text">Минимальная предоплата</p>
+          </div>
+        </div>
+        <!-- <div class="nr-section3-right-wrapper">
           <div>
             <h5 class="nr-section3-right__persent">146%</h5>
-            <p>Уровень самоотдачи</p>
+            <p class="nr-section3-right__text">Уровень самоотдачи</p>
           </div>
           <div>
             <h5 class="nr-section3-right__persent">100%</h5>
-            <p>Соблюдение  сроков</p>
+            <p class="nr-section3-right__text">Соблюдение сроков</p>
           </div>
           <div>
             <h5 class="nr-section3-right__persent">50%</h5>
-            <p>Минимальная предоплата</p>
+            <p class="nr-section3-right__text">Минимальная предоплата</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
@@ -148,7 +162,7 @@
         </a>
       </div>
       <div class="nr-customers">
-        <a class="nr-section4__customers" href="#">
+        <a href="#">
           <img src="./img/logo-2.png" alt="">
         </a>
       </div>
@@ -178,9 +192,9 @@
             <a class="nr-section5-about__btn btn" href="mailto:info@nerds.gmail.com">Напишите нам</a>
           </div>
         </div>
-        <div>
+        <!-- <div>
           <img src="./img/map-marker.png" alt="marker">
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- <section>
