--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
       </div>
       <div class="nr-section3-right">
         <img src="./img/nerds-illustration.png" alt="nerds">
-        <h5 class="nr-section3-right__title">с 2004 года Любим точность во всем:</h5>
+        <h4 class="nr-section3-right__title">с 2004 года Любим точность во всем:</h4>
         <div class="ba-row">
           <div class="ba-col-4">
-            <h5 class="nr-section3-right__persent">146%</h5>
+            <p class="nr-section3-right__persent">146%</p>
             <p class="nr-section3-right__text">Уровень самоотдачи</p>
           </div>
           <div class="ba-col-4">
-            <h5 class="nr-section3-right__persent">100%</h5>
+            <p class="nr-section3-right__persent">100%</p>
             <p class="nr-section3-right__text">Соблюдение сроков</p>
           </div>
           <div class="ba-col-4">
-            <h5 class="nr-section3-right__persent">50%</h5>
+            <p class="nr-section3-right__persent">50%</p>
             <p class="nr-section3-right__text">Минимальная предоплата</p>
           </div>
         </div>
