--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           <h1 class="nr-section1-left__title">
             Долго, дорого, скурпулезно.
           </h1>
-          <h3 class="nr-section1-left__descr">
+          <p class="nr-section1-left__descr">
             Математически выверенный дизайн для вашего сайта или мобильного приложения.
-          </h3>
+          </p>
           <a href="#" class="nr-section1-left__btn btn">УЗНАТЬ БОЛЬШЕ</a>
         </div>
         <div class="nr-section1-right">
