--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
         <h4 class="nr-section3-right__title">с 2004 года Любим точность во всем:</h4>
         <div class="ba-row">
           <div class="ba-col-4">
-            <p class="nr-section3-right__persent">146%</p>
+            <p class="nr-section3-right__persent">146<span>%</span></p>
             <p class="nr-section3-right__text">Уровень самоотдачи</p>
           </div>
           <div class="ba-col-4">
-            <p class="nr-section3-right__persent">100%</p>
+            <p class="nr-section3-right__persent">100<span>%</span></p>
             <p class="nr-section3-right__text">Соблюдение сроков</p>
           </div>
           <div class="ba-col-4">
-            <p class="nr-section3-right__persent">50%</p>
+            <p class="nr-section3-right__persent">50<span>%</span></p>
             <p class="nr-section3-right__text">Минимальная предоплата</p>
           </div>
         </div>
@@ -156,7 +156,29 @@
     </section>
 
     <div class="nr-section4 container ">
-      <div class="nr-customers">
+      <!-- <div class="ba-row "> -->
+        <div class="nr-customers">
+          <a href="#">
+            <img src="./img/logo-1.png" alt="">
+          </a>
+        </div>
+        <div class="nr-customers">
+          <a href="#">
+            <img src="./img/logo-2.png" alt="">
+          </a>
+        </div>
+        <div class="nr-customers">
+          <a href="#">
+            <img src="./img/logo-3.png" alt="">
+          </a>
+        </div>
+        <div class="nr-customers">
+          <a href="#">
+            <img class="nr-section4__customers" src="./img/logo-4.png" alt="">
+          </a>
+        </div>
+      <!-- </div> -->
+      <!-- <div class="nr-customers">
         <a href="#">
           <img src="./img/logo-1.png" alt="">
         </a>
@@ -175,7 +197,7 @@
         <a href="#">
           <img class="nr-section4__customers" src="./img/logo-4.png" alt="">
         </a>
-      </div>
+      </div> -->
 
     </div>
 
