--- a/index.html
+++ b/index.html
@@ -138,47 +138,11 @@
             <p class="nr-section3-right__text">Минимальная предоплата</p>
           </div>
         </div>
-        <!-- <div class="nr-section3-right-wrapper">
-          <div>
-            <h5 class="nr-section3-right__persent">146%</h5>
-            <p class="nr-section3-right__text">Уровень самоотдачи</p>
-          </div>
-          <div>
-            <h5 class="nr-section3-right__persent">100%</h5>
-            <p class="nr-section3-right__text">Соблюдение сроков</p>
-          </div>
-          <div>
-            <h5 class="nr-section3-right__persent">50%</h5>
-            <p class="nr-section3-right__text">Минимальная предоплата</p>
-          </div>
-        </div> -->
       </div>
     </section>
 
     <div class="nr-section4 container ">
-      <!-- <div class="ba-row "> -->
-        <div class="nr-customers">
-          <a href="#">
-            <img src="./img/logo-1.png" alt="">
-          </a>
-        </div>
-        <div class="nr-customers">
-          <a href="#">
-            <img src="./img/logo-2.png" alt="">
-          </a>
-        </div>
-        <div class="nr-customers">
-          <a href="#">
-            <img src="./img/logo-3.png" alt="">
-          </a>
-        </div>
-        <div class="nr-customers">
-          <a href="#">
-            <img class="nr-section4__customers" src="./img/logo-4.png" alt="">
-          </a>
-        </div>
-      <!-- </div> -->
-      <!-- <div class="nr-customers">
+      <div class="nr-customers">
         <a href="#">
           <img src="./img/logo-1.png" alt="">
         </a>
@@ -195,10 +159,9 @@
       </div>
       <div class="nr-customers">
         <a href="#">
-          <img class="nr-section4__customers" src="./img/logo-4.png" alt="">
+          <img src="./img/logo-4.png" alt="">
         </a>
-      </div> -->
-
+      </div>
     </div>
 
     <section class="nr-section5">
@@ -211,7 +174,7 @@
             </h4>
             <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             <p>тел. +7 (812) 275-75-75</p>
-            <a class="nr-section5-about__btn btn" href="mailto:info@nerds.gmail.com">Напишите нам</a>
+            <a class="nr-section5-about__btn btn" href="mailto:info@nerds.com">Напишите нам</a>
           </div>
         </div>
         <!-- <div>
