--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
         </div> -->
       </div>
     </section>
-    <!-- <section>
+    <section>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6115610037818!2d30.32152390393267!3d59.93858749715135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1572667649929!5m2!1sru!2sua"
         width="100%" height="418" frameborder="0" style="border:0;" allowfullscreen="">
       </iframe>
-    </section> -->
+    </section>
 
     <footer class="nr-footer">
       <div class="container nr-footer-wrapper">
